--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ _ss_environment.php
 /vendor/
 /framework/
 /cms/
-/assets/
+_resampled/
 /siteconfig/
 /reports/
+
+/themes/simple
 
 /.history
 /composer.lock
