--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -9,3 +9,8 @@ After:
 # Caution: Indentation through two spaces, not tabs
 SSViewer:
   theme: 'one-ring'
+
+# File:
+#   extensions:
+#     - FileExtension
+
